--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,51 +1,54 @@
 .header {
-  border-bottom: 1px dashed #949494;
   display: flex;
   justify-content: space-between;
-  height:90px;
-  margin:0px;
+  height: 75px;
+  margin: 0px;
+}
+
+.header-hr {
+  margin: auto;
+  width: 640px;
 }
 
 .header-menu {
-  margin: 45px 0px 0px 15px;
-  font-size: 21px;
-  width: 125px;
+  margin: 47px 0px 0px 50px;
+  font-size: 18px;
   display: flex;
+  width: 150px;
   justify-content: space-between;
-  font-family: "Marko One";
+  font-family: "Marko One", sans-serif;
   color: #093750;
 
   .link {
-    padding: 2px;
+    padding-left:5px;
   }
+
 }
 
 .header-logo {
   font-size: 36px;
-  margin:15px 15px 0px 0px;
-  padding:0px;
+  margin: 15px 30px 0px 0px;
+  padding: 0px;
   color: #093750;
 
   h1 {
     font-size: 36px;
-    margin:0px;
-    padding:0px;
-    font-family: "Marko One",Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    font-family: "Marko One", sans-serif;
     color: #093750;
   }
 
   h2 {
-    font-family: "Marko One",Helvetica, sans-serif;
+    font-family: "Marko One", sans-serif;
     color: #093750;
     font-size: 9px;
-    margin:0px;
-    margin-left:15px;
-    padding:0px;
-    font-family: "Marko One",Helvetica, sans-serif;
-
+    margin: 0px;
+    margin-left: 15px;
+    padding: 0px;
+    font-family: "Marko One", Helvetica, sans-serif;
   }
 }
-
 
 .link {
   box-shadow: none;
