--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -1,18 +1,18 @@
 
 .main_title {
   font-family: Roboto;
-  margin: 15px 0px 15px 0px;
+  margin: 30px 0px 15px 0px;
   padding: 0px 0px 0px 7px;
-  border-left: 4px solid #232323;
+  border-left: 3px solid #CFCFCF;
   p {
-    font-family: Marko One;
+    font-family: "Marko One";
     font-size: 12px;
     padding: 0px;
     margin: 0px;
   }
 
   h1 {
-    font-family: Bitter;
+    font-family: Roboto;
     font-weight:bold;
     font-size: 48px;
     padding: 0px;
@@ -21,7 +21,36 @@
 }
 
 .blog_post {
-    font-family: Cairo;
+    * {
+      padding: 0px;
+      margin: 0px;
+    }
+    font-family: Roboto;
     font-size: 21px;
-    padding-left:15px;
+    p,ol,ul {
+      padding-left:25px;
+    }
+
+    p {
+      margin-top: 14px;
+      margin-bottom: 28px;
+    }
+
+    h1 {
+      font-family: Roboto;
+      margin-top: 10px;
+      margin-left: 5px;
+      padding-left: 5px;
+      border-left: 3px solid #CFCFCF;
+      width:100%;
+    }
+
+    h2 {
+      font-family: Roboto;
+      margin-top: 0px;
+      padding-top: 0px;
+      margin-left: 5px;
+      padding-left: 5px;
+      border-left: 2px solid #CFCFCF;
+    }
 }
